Fixed the overflow problem on the skills cards page.

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -90,6 +90,7 @@ body {
 	background-size: cover;
 	position: relative;
 	background-color: rgb(161, 181, 202);
+	overflow: hidden;
 }
 
 .menu-wrap {
